<resources>
    <string name="app_name">FoodTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imt_hello">Здесь можно узнать индекс массы тела</string>
    <string name="imt_height">Рост</string>
    <string name="imt_weight">Вес</string>
    <string name="imt_calc">Посчитать ИМТ</string>
    <string name="sm">см</string>
    <string name="kg">кг</string>
    <string name="severe_body_weight_deficiency">Выраженный дифицит массы тела</string>
    <string name="insufficient_body_weight"> Дефицит массы тела</string>
    <string name="standard">Норма, поздравляем</string>
    <string name="overweight">Избыточная масса тела (предожирение)</string>
    <string name="first_degree_obesity">Ожирение первой степени</string>
    <string name="second_degree_obesity">Ожирение второй степени</string>
    <string name="third_degree_obesity">Ожирение третьей степени</string>
    <string name="unknown_verdict">Проверьте корректность введенных данных</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед🥗</string>
    <string name="dinner">Ужин🥘</string>
    <string-array name="water_amounts">
        <item>50 мл</item>
        <item>100 мл</item>
        <item>150 мл</item>
        <item>200 мл</item>
        <item>250 мл</item>
        <item>350 мл</item>
        <item>400 мл</item>
        <item>500 мл</item>
        <item>600 мл</item>
        <item>700 мл</item>
        <item>800 мл</item>
        <item>900 мл</item>
        <item>1000 мл</item>
    </string-array>
    <string-array name="water_types">
        <item>Вода</item>
        <item>Черный чай</item>
        <item>Кофе</item>
        <item>Миниральная вода</item>
        <item>Зелёный чай</item>
        <item>Травяной чай</item>
        <item>Кола</item>
        <item>Диетическая кола</item>
        <item>Молоко</item>
        <item>Сок</item>
        <item>Другое</item>
    </string-array>
    <string name="addition">Добавить приём пищи</string>
    <string name="top_view_discriprion">topView</string>
    <string name="fast_food">Перекус🍪</string>
    <string name="add">Добавить</string>
    <string name="home">Дневник</string>
    <string name="stat">Статистика</string>
    <string name="food_search">Поиск еды</string>
    <string name="cancel">Отмена</string>
    <string name="add_foot">Добавить свою еду</string>
    <string name="add_your_product">Добавьте свой продукт</string>
    <string name="title_product">Название</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="fats">Жиры</string>
    <string name="protein">Белки</string>
    <string name="energy">Калорийность</string>
    <string name="per_gramm">/100g</string>
    <string name="kсal">kсal</string>
    <string name="delete">Удалить</string>
    <string name="prod">Продукты</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="lable_string">Text</string>
    <string name="mainbar1">Завтрак 🍳</string>
    <string name="image_product">image product</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="empty_title">empty title</string>
    <string name="brands">brands</string>
    <string name="categories">categories</string>
    <string name="gr">г.</string>
    <string name="today">Привет 😼</string>
    <string name="IMT">ИМТ</string>
    <string name="data">Данные</string>
    <string name="update">Обновить</string>
    <string name="man">Мужской♂️</string>
    <string name="woman">Женский♀️</string>
    <string name="submit">Отправить🎗️</string>
    <string name="data_temp">Мои Данные😼</string>
    <string name="gender">Пол</string>
    <string name="name">Имя</string>
    <string name="target">Цель🎯</string>
    <string name="target_ine">Я худею</string>
    <string name="target_two">Я толстею</string>
    <string name="age">Возраст</string>
    <string name="targetthree">Я держусь</string>
    <string name="measures">Замеры 🚀</string>
    <string name="kkal">ккал</string>
    <string name="zero">0</string>
    <string name="total">Всего:</string>
    <string name="goal">Цель:</string>
    <string name="sto">100</string>
    <string name="g">г.</string>
    <string name="addProduct">Добавить продукт</string>
    <string name="pedometr">Шагомер 🐾</string>
    <string name="step">step</string>
    <string name="pedometer">Шагомер</string>
    <string name="step_sensor_error">Сенсор шагомер недоступен!</string>
    <string name="water">Вода💦</string>
    <string name="fifeh">50</string>
    <string name="today_target">Цель на сегодня:</string>
    <string name="error">Сервер недоступен, попробуйте позже</string>
    <string name="calories">Энергетическая ценность</string>
</resources>