<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_eat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/empty_title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/empty_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_eat" />

    <TextView
        android:id="@+id/brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brands"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/calories_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/calories"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/categories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/proteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/protein"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/proteins_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/proteins"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/proteins" />


    <TextView
        android:id="@+id/fats_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/fat"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/fat" />

    <TextView
        android:id="@+id/carbohydrates_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/carbohydrates"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />


    <View
        android:id="@+id/cancel"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/_bg__secondary_button_ek1_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/add"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/__title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/_bg__android_large___1_ek2_color"

        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <TextView
        android:id="@+id/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/add"

        android:textColor="@color/_bg__android_large___1_ek2_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@+id/add"
        app:layout_constraintStart_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add" />

    <TextView
        android:id="@+id/weight_gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/weight" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/weight_gr"
        app:layout_constraintStart_toStartOf="@+id/add" />

</androidx.constraintlayout.widget.ConstraintLayout>