<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/addProduct"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stat"
        app:layout_constraintStart_toStartOf="@+id/stat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spacer2"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_product"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg__search_ek1_shape"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCalories"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/energy"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg__search_ek1_shape"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutProtein"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/protein"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg__search_ek1_shape"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fats"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg__search_ek1_shape"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCarbohydrates"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/carbohydrates"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg__search_ek1_shape"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="28dp"
        app:rippleColor="@color/purple_200" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="28dp"
        app:rippleColor="@color/purple_200" />

</LinearLayout>