<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.Material3.CardView.Filled"
        >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kсal"
                    android:textSize="20sp" />
                <TextView

                    android:id="@+id/protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_gramm"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_gramm"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/carbohydrates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_gramm"
                    android:textSize="20sp" />
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:layout_marginStart="55dp"
                android:textSize="20sp"
                android:text="@string/delete"
                style="@style/Widget.Material3.Button"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
